# Campus-Connect

./: .env.example  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
Campus_Connect/: asgi.py  urls.py  wsgi.py
Campus_Connect/settings/: base.py  development.py  production.py
Devagiri_Students/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
Devagiri_Students/settings/: base.py  development.py  production.py
base/: admin.py  custom_admin.py  forms.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_alter_course_name.py  0002_alter_news_body.py  0002_alter_program_venue.py  0002_delete_main.py  0003_news_image.py  0003_rename_full_form_community_about_and_more.py  0004_community_logo.py  0004_program_date_alter_program_time.py  0005_fests_blooddonation.py  0006_fests_logo_fests_name.py  0007_alter_carousel_image.py  0008_alter_blooddonation_name_alter_blooddonation_phone_and_more.py  0009_alter_blooddonatedstudents_blood_type.py  0010_remove_bloodreq_contact.py  0011_alter_carousel_id.py  0012_alter_blooddonatedstudents_id_alter_blooddonation_id_and_more.py  0013_blooddonatedstudents_donated_on.py  0014_alter_blooddonatedstudents_donated_on.py  0015_alter_program_link.py  0016_alter_program_link.py  0027_program_created_by.py  (+11 more)
templates/: blood-donation-response.html  blood_donation_admin.html  blood_donation_form.html  blood_donation_response.html  creators.html  explore.html  fests.html  footer.html  home.html  login.html  main.html  navbar.html  news.html  program.html
(+29 files in other folders)
