[project]
name = "campus-connect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "boto3==1.34.106",
    "botocore==1.34.106",
    "django==5.0.6",
    "django-autoslug==1.9.9",
    "django-cleanup==8.1.0",
    "django-storages==1.14.3",
    "jmespath==1.0.1",
    "pillow==10.3.0",
    "psycopg2-binary==2.9.9",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "s3transfer==0.10.1",
    "six==1.16.0",
    "sqlparse==0.5.0",
    "tzdata==2024.1",
    "urllib3==2.2.1",
]
